style/style.css
/* ... */
#contactsMapCol {
    padding: 0;
    height: auto;
    border-top: 1px solid #026fcf;
    min-height: 260px;
}

.trivia-cell-title {
    text-align: center;
}

@media screen and (max-width: 499px) {
    #contactsMapCol {
        border-top: 2px solid #026fcf;
        border-bottom: 2px solid #026fcf;
        margin-top: 1em;
    }

    #sliderBox {
        /* If we do left -50vw, details are pulled slightly too much to the left
        TO DO: Fix the cause. */
        margin-left: calc(50% - 48.33vw);
        margin-right: calc(50% - 50vw);
        width: 100vmin;
        border-left: none;
        border-right: none;
    }

    .trivia-section {
        margin-left: calc(50% - 48.33vw);
        margin-right: calc(50% - 50vw);
        width: 100vmin;
    }

    .blockquote {
        padding: 0 .5em;
    }

    .trivia-cell-title {
        text-align: right;
    }

}

#contactsFirstCol {
    padding-top: 1.6rem;
    text-align: center;
}

#addressTable {
    margin-top: 1em;
}

#locationTitle {
    text-align: center;
    align-content: center;
}


#triviaTable tr, #triviaTable td {
    border: none;
    padding: 0.5em;
}

#addressTable th, #addressTh, #postalTh, #triviaTable th, #triviaTable tr {
    padding-top: 1.35rem;
    margin-bottom: 0;
    padding-right: 2.95rem;
    border: none;
}

#addressTable td {
    border: none;
    padding-bottom: 1.35rem;
    padding-right: 2.95rem;
}

.transit-details {
    text-align: left;
    padding-left: 1em;
}

#publicTransport {
    margin-top: -0.6em;
}

#addressTh, #postalTh {
    font-size: 1.25em!important;
    margin-top: -10px;
    padding: 0;
}

.map-library-changer {
    margin-top: 1em;
}

.transit-details {
    margin-top: -0.8em;
}

#mapContainer {
    width: 100%;
    height: 100%;
    z-index: 99;
}

#expandMap {
    top: 1em;
}

/* Map borders, if not in fullscreen mode */
#contactsMapCol {

}

#noCoordinates {
    margin-top: 14px;
    margin-bottom: 6px;
    padding-left: 2em;
}

#contactsFirstCol {
    border-top: 1px solid #026fcf;
}

@media (min-width: 769px) {
    #contactsFirstCol {
        padding: 1.7rem 2.7rem;
        padding-top: 2.7rem;
        background: #EDEDE7;
    }

    #addressTable {
        background: #EDEDE7;
    }

    #locationRow {
        border: none;
    }

    #contactsMapCol {
        border: 1px solid #026fcf;
        border-top-right-radius: 3px;
        border-bottom-right-radius: 3px;
    }
}


#pageContactInfo section h2 i {
    font-size: 0.85em;
}

/* Social media links */
.some-links {
    text-align: right;
    align-content: center;
    padding-right: 1em;
}

@media (max-width:979px) {
    .some-links {
        text-align: left;
        align-content: flex-start;
        float: left;
    }
    .container {
        min-width: 100%!important;
    }

    #staffTable {
        margin-left: calc(50% - 50vw);
        margin-right: calc(50% - 50vw);
        width: 100vmin;
    }

    #locationRow {
        margin-left: calc(50% - 50vw);
        margin-right: calc(50% - 50vw);
        width: 100vmin;
    }

    #locationDetails {
        position: relative;

    }

}

@media (min-width:989px) {
    #mainContainer {
        border: #026FCF solid 1px;
        border-radius: 10px;
        background: rgba(220, 221, 212, 0.15);
        padding-top: 2em;
        padding-bottom: 2.5em;
        padding-left: 1em;
        padding-right: 1em;
        margin-top: 1.3em;
        margin-bottom: 1.3em;
    }
}


.some-links a {
    margin-right: .5rem
}

.some-links a:hover {
    opacity: .85
}

@media (min-width:769px) {
    .some-links {
        margin-top: -.5rem
    }
}

/* This splits the title evenly on mobile instead of starting 2nd row at the icon */
#contactsTitle {
    display: flex;
    align-items: center;
    font-size: 1.3em;
    font-weight: 600;
    border: none;
}

#contactsTitle i {
    padding-right: 0.3em!important;
}

.some-links a img{
    margin-top: 10px; /* Using em would not add margin on mobile, where rows are splitted */
}

#contactsTable th {
    padding-left: 2.95rem;
    padding-top: 0.7em;
    padding-bottom: 0.5em;
}

#contactsTable td {
    padding: 0.85rem 2.95rem !important;
}

/* TO DO: Links and contacts title gets wrapped pretty early... FIX */
.thead-default {
    background-color: #EDEDE7;
}

.table-striped>tbody>tr:nth-child(even)>td,
.table-striped>tbody>tr:nth-child(even)>th {
    background-color: rgba(137, 137, 101, 0.08);
}

.table-striped>tbody>tr:nth-child(odd)>td,
.table-striped>tbody>tr:nth-child(odd)>th {
    background-color: rgba(137, 137, 101, 0.05);
}

/* Modal */
.modal-lg #modalContent {
    margin-top: -1.7em;
    padding-left: 5em;
    padding-right: 5em;
}

#modalContent, #linkToInfo {
    padding: 0 5em;
}

@media screen and (max-width: 499px) {


    .modal-lg #modalContent {
        margin-top: -1.3em;
        padding-left: 2em;
        padding-right: 2em;
    }

    #modalContent, #linkToInfo {
        padding: 0 2em;
    }
}

.modal-lg #linkToInfo {
    padding-left: 5em;
    padding-right: 5em;
}

#modalTitle {
    margin-left: 1.5em;
    margin-top: 0.8em;
}

.modal-title-small {
    font-size: 1.3em;
}

#modalContent img {
    border: 3px solid #026FCF;
    border-radius: 4px;
    max-width: 100%;
    max-height: 350px;
    margin-bottom: 10px;
}

.modal-header, .modal-footer {
    border: none!important;
}

#closeModal {
    font-size: 1.1em;
    justify-content: space-between;
    margin: -0.6em auto 0.35em;
}

/* Close button in the right corner */
.close {
    font-size: 1.85em;
    color: #f7502e;
}

.close:hover {
    color: #d83d1e;
}

.modal-backdrop {
    display: none !important;
}


.modal {
    border-radius:10px;
}

#myModal {
    height: auto!important;
    max-height: 5500px!important;
    z-index: 99999999!important;

}
/* ... */

